--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
   <div id="THcard"></div>
 
 
-  <div class="attribution">
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Heba Ibrahem</a>.
-  </div>
+  </footer>
 </body>
 
 </html>
