--- a/index.html
+++ b/index.html
@@ -16,45 +16,47 @@
 <body>
 
   <main>
-    <img src="images/image-equilibrium.jpg" alt="equilibrium" class="mainImg">
-    <div class="show">
-      <div class="view">
-        <img src="images/icon-view.svg" alt="">
-      </div>
-    </div>
-   
-    <div id="txt">
-      <p id="title">Equilibrium #3429</p>
-
-      <p>Our Equilibrium collection promotes balance and calm.</p>
-
-      <div id="details">
-        <div id="eth">
-          <img src="images/icon-ethereum.svg" alt="eth">
-          <p>0.041 ETH</p>
-        </div>
-
-        <div id="days">
-          <img src="images/icon-clock.svg" alt="">
-          <p>3 days left</p>
+    <div class="card"> <img src="images/image-equilibrium.jpg" alt="equilibrium" class="mainImg">
+      <div class="show">
+        <div class="view">
+          <img src="images/icon-view.svg" alt="">
         </div>
       </div>
-      <hr>
 
-      <div id="create">
-        <img src="images/image-avatar.png" alt="avatar">
-        <p>Creation of <span>Jules Wyvern</span></p>
+      <div id="txt">
+        <h1 id="title">Equilibrium #3429</h1>
+
+        <p>Our Equilibrium collection promotes balance and calm.</p>
+
+        <div id="details">
+          <div id="eth">
+            <img src="images/icon-ethereum.svg" alt="eth">
+            <p>0.041 ETH</p>
+          </div>
+
+          <div id="days">
+            <img src="images/icon-clock.svg" alt="">
+            <p>3 days left</p>
+          </div>
+        </div>
+        <hr>
+
+        <div id="create">
+          <img src="images/image-avatar.png" alt="avatar">
+          <p>Creation of <span>Jules Wyvern</span></p>
+        </div>
       </div>
     </div>
+    <div id="Scard"></div>
+    <div id="THcard"></div>
+
+
+    <footer class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Heba Ibrahem</a>.
+    </footer>
   </main>
-  <div id="Scard"></div>
-  <div id="THcard"></div>
 
-
-  <footer class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Heba Ibrahem</a>.
-  </footer>
 </body>
 
 </html>
